ffigen/LabSoundHelper.h

// The orientation property indicates the X component of the direction in
// which the audio source is facing, in cartesian space. The complete
// vector is defined by the position of the audio source, and the direction
// in which it is facing.
void PannerNode_setOrientation(int nodeId, float x, float y, float z);
int PannerNode_orientationX(int nodeId);
int PannerNode_orientationY(int nodeId);
int PannerNode_orientationZ(int nodeId);
void PannerNode_setVelocity(int nodeId, float x, float y, float z);
int PannerNode_velocityX(int nodeId);
int PannerNode_velocityY(int nodeId);
int PannerNode_velocityZ(int nodeId);
int PannerNode_distanceGain(int nodeId);
int PannerNode_coneGain(int nodeId);
float PannerNode_refDistance(int nodeId);
void PannerNode_setRefDistance(int nodeId, float refDistance);
float PannerNode_maxDistance(int nodeId);
void PannerNode_setMaxDistance(int nodeId, float maxDistance);
float PannerNode_rolloffFactor(int nodeId);
void PannerNode_setRolloffFactor(int nodeId, float rolloffFactor);
float PannerNode_coneInnerAngle(int nodeId);
void PannerNode_setConeInnerAngle(int nodeId, float angle);
float PannerNode_coneOuterAngle(int nodeId);
void PannerNode_setConeOuterAngle(int nodeId, float angle);
float PannerNode_coneOuterGain(int nodeId);
void PannerNode_setConeOuterGain(int nodeId, float angle);
void PannerNode_getAzimuthElevation(int nodeId, AudioContext* context, double * outAzimuth, double * outElevation);
void PannerNode_dopplerRate(int nodeId, AudioContext* context);
///////////////////////////
/// ChannelSplitterNode ///
///////////////////////////
int createChannelSplitterNode(AudioContext* context);
void ChannelSplitterNode_addOutputs(int nodeId, int n);
/////////////////////////
/// ChannelMergerNode ///
/////////////////////////

int createChannelMergerNode(AudioContext* context);
void ChannelMergerNode_addInputs(int nodeId, int n);
void ChannelMergerNode_setOutputChannelCount(int nodeId, int n);