lib/tau_labs_bindings_generated.dart


  /// The orientation property indicates the X component of the direction in
  /// which the audio source is facing, in cartesian space. The complete
  /// vector is defined by the position of the audio source, and the direction
  /// in which it is facing.
  void PannerNode_setOrientation(int nodeId, double x, double y, double z) {
    return _PannerNode_setOrientation(nodeId, x, y, z);
  }

  late final _PannerNode_setOrientationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Float, ffi.Float, ffi.Float)
    >
  >('PannerNode_setOrientation');
  late final _PannerNode_setOrientation =
      _PannerNode_setOrientationPtr.asFunction<
        void Function(int, double, double, double)
      >();

  int PannerNode_orientationX(int nodeId) {
    return _PannerNode_orientationX(nodeId);
  }

  late final _PannerNode_orientationXPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_orientationX',
      );
  late final _PannerNode_orientationX =
      _PannerNode_orientationXPtr.asFunction<int Function(int)>();

  int PannerNode_orientationY(int nodeId) {
    return _PannerNode_orientationY(nodeId);
  }

  late final _PannerNode_orientationYPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_orientationY',
      );
  late final _PannerNode_orientationY =
      _PannerNode_orientationYPtr.asFunction<int Function(int)>();

  int PannerNode_orientationZ(int nodeId) {
    return _PannerNode_orientationZ(nodeId);
  }

  late final _PannerNode_orientationZPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_orientationZ',
      );
  late final _PannerNode_orientationZ =
      _PannerNode_orientationZPtr.asFunction<int Function(int)>();

  void PannerNode_setVelocity(int nodeId, double x, double y, double z) {
    return _PannerNode_setVelocity(nodeId, x, y, z);
  }

  late final _PannerNode_setVelocityPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Float, ffi.Float, ffi.Float)
    >
  >('PannerNode_setVelocity');
  late final _PannerNode_setVelocity =
      _PannerNode_setVelocityPtr.asFunction<
        void Function(int, double, double, double)
      >();

  int PannerNode_velocityX(int nodeId) {
    return _PannerNode_velocityX(nodeId);
  }

  late final _PannerNode_velocityXPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_velocityX',
      );
  late final _PannerNode_velocityX =
      _PannerNode_velocityXPtr.asFunction<int Function(int)>();

  int PannerNode_velocityY(int nodeId) {
    return _PannerNode_velocityY(nodeId);
  }

  late final _PannerNode_velocityYPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_velocityY',
      );
  late final _PannerNode_velocityY =
      _PannerNode_velocityYPtr.asFunction<int Function(int)>();

  int PannerNode_velocityZ(int nodeId) {
    return _PannerNode_velocityZ(nodeId);
  }

  late final _PannerNode_velocityZPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_velocityZ',
      );
  late final _PannerNode_velocityZ =
      _PannerNode_velocityZPtr.asFunction<int Function(int)>();

  int PannerNode_distanceGain(int nodeId) {
    return _PannerNode_distanceGain(nodeId);
  }

  late final _PannerNode_distanceGainPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_distanceGain',
      );
  late final _PannerNode_distanceGain =
      _PannerNode_distanceGainPtr.asFunction<int Function(int)>();

  int PannerNode_coneGain(int nodeId) {
    return _PannerNode_coneGain(nodeId);
  }

  late final _PannerNode_coneGainPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_coneGain',
      );
  late final _PannerNode_coneGain =
      _PannerNode_coneGainPtr.asFunction<int Function(int)>();

  double PannerNode_refDistance(int nodeId) {
    return _PannerNode_refDistance(nodeId);
  }

  late final _PannerNode_refDistancePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'PannerNode_refDistance',
      );
  late final _PannerNode_refDistance =
      _PannerNode_refDistancePtr.asFunction<double Function(int)>();

  void PannerNode_setRefDistance(int nodeId, double refDistance) {
    return _PannerNode_setRefDistance(nodeId, refDistance);
  }

  late final _PannerNode_setRefDistancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'PannerNode_setRefDistance',
      );
  late final _PannerNode_setRefDistance =
      _PannerNode_setRefDistancePtr.asFunction<void Function(int, double)>();

  double PannerNode_maxDistance(int nodeId) {
    return _PannerNode_maxDistance(nodeId);
  }

  late final _PannerNode_maxDistancePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'PannerNode_maxDistance',
      );
  late final _PannerNode_maxDistance =
      _PannerNode_maxDistancePtr.asFunction<double Function(int)>();

  void PannerNode_setMaxDistance(int nodeId, double maxDistance) {
    return _PannerNode_setMaxDistance(nodeId, maxDistance);
  }

  late final _PannerNode_setMaxDistancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'PannerNode_setMaxDistance',
      );
  late final _PannerNode_setMaxDistance =
      _PannerNode_setMaxDistancePtr.asFunction<void Function(int, double)>();

  double PannerNode_rolloffFactor(int nodeId) {
    return _PannerNode_rolloffFactor(nodeId);
  }

  late final _PannerNode_rolloffFactorPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'PannerNode_rolloffFactor',
      );
  late final _PannerNode_rolloffFactor =
      _PannerNode_rolloffFactorPtr.asFunction<double Function(int)>();

  void PannerNode_setRolloffFactor(int nodeId, double rolloffFactor) {
    return _PannerNode_setRolloffFactor(nodeId, rolloffFactor);
  }

  late final _PannerNode_setRolloffFactorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'PannerNode_setRolloffFactor',
      );
  late final _PannerNode_setRolloffFactor =
      _PannerNode_setRolloffFactorPtr.asFunction<void Function(int, double)>();

  double PannerNode_coneInnerAngle(int nodeId) {
    return _PannerNode_coneInnerAngle(nodeId);
  }

  late final _PannerNode_coneInnerAnglePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'PannerNode_coneInnerAngle',
      );
  late final _PannerNode_coneInnerAngle =
      _PannerNode_coneInnerAnglePtr.asFunction<double Function(int)>();

  void PannerNode_setConeInnerAngle(int nodeId, double angle) {
    return _PannerNode_setConeInnerAngle(nodeId, angle);
  }

  late final _PannerNode_setConeInnerAnglePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'PannerNode_setConeInnerAngle',
      );
  late final _PannerNode_setConeInnerAngle =
      _PannerNode_setConeInnerAnglePtr.asFunction<void Function(int, double)>();

  double PannerNode_coneOuterAngle(int nodeId) {
    return _PannerNode_coneOuterAngle(nodeId);
  }

  late final _PannerNode_coneOuterAnglePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'PannerNode_coneOuterAngle',
      );
  late final _PannerNode_coneOuterAngle =
      _PannerNode_coneOuterAnglePtr.asFunction<double Function(int)>();

  void PannerNode_setConeOuterAngle(int nodeId, double angle) {
    return _PannerNode_setConeOuterAngle(nodeId, angle);
  }

  late final _PannerNode_setConeOuterAnglePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'PannerNode_setConeOuterAngle',
      );
  late final _PannerNode_setConeOuterAngle =
      _PannerNode_setConeOuterAnglePtr.asFunction<void Function(int, double)>();

  double PannerNode_coneOuterGain(int nodeId) {
    return _PannerNode_coneOuterGain(nodeId);
  }

  late final _PannerNode_coneOuterGainPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'PannerNode_coneOuterGain',
      );
  late final _PannerNode_coneOuterGain =
      _PannerNode_coneOuterGainPtr.asFunction<double Function(int)>();

  void PannerNode_setConeOuterGain(int nodeId, double angle) {
    return _PannerNode_setConeOuterGain(nodeId, angle);
  }

  late final _PannerNode_setConeOuterGainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'PannerNode_setConeOuterGain',
      );
  late final _PannerNode_setConeOuterGain =
      _PannerNode_setConeOuterGainPtr.asFunction<void Function(int, double)>();

  void PannerNode_getAzimuthElevation(
    int nodeId,
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Double> outAzimuth,
    ffi.Pointer<ffi.Double> outElevation,
  ) {
    return _PannerNode_getAzimuthElevation(
      nodeId,
      context,
      outAzimuth,
      outElevation,
    );
  }

  late final _PannerNode_getAzimuthElevationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Double>,
        ffi.Pointer<ffi.Double>,
      )
    >
  >('PannerNode_getAzimuthElevation');
  late final _PannerNode_getAzimuthElevation =
      _PannerNode_getAzimuthElevationPtr.asFunction<
        void Function(
          int,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
        )
      >();

  void PannerNode_dopplerRate(int nodeId, ffi.Pointer<ffi.Void> context) {
    return _PannerNode_dopplerRate(nodeId, context);
  }

  late final _PannerNode_dopplerRatePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Void>)>
  >('PannerNode_dopplerRate');
  late final _PannerNode_dopplerRate =
      _PannerNode_dopplerRatePtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Void>)
      >();

  /// ////////////////////////
  /// ChannelSplitterNode ///
  /// ////////////////////////
  int createChannelSplitterNode(ffi.Pointer<ffi.Void> context) {
    return _createChannelSplitterNode(context);
  }

  late final _createChannelSplitterNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createChannelSplitterNode',
      );
  late final _createChannelSplitterNode =
      _createChannelSplitterNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void ChannelSplitterNode_addOutputs(int nodeId, int n) {
    return _ChannelSplitterNode_addOutputs(nodeId, n);
  }

  late final _ChannelSplitterNode_addOutputsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'ChannelSplitterNode_addOutputs',
      );
  late final _ChannelSplitterNode_addOutputs =
      _ChannelSplitterNode_addOutputsPtr.asFunction<void Function(int, int)>();

  /// //////////////////////
  /// ChannelMergerNode ///
  /// //////////////////////
  int createChannelMergerNode(ffi.Pointer<ffi.Void> context) {
    return _createChannelMergerNode(context);
  }

  late final _createChannelMergerNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createChannelMergerNode',
      );
  late final _createChannelMergerNode =
      _createChannelMergerNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void ChannelMergerNode_addInputs(int nodeId, int n) {
    return _ChannelMergerNode_addInputs(nodeId, n);
  }

  late final _ChannelMergerNode_addInputsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'ChannelMergerNode_addInputs',
      );
  late final _ChannelMergerNode_addInputs =
      _ChannelMergerNode_addInputsPtr.asFunction<void Function(int, int)>();

  void ChannelMergerNode_setOutputChannelCount(int nodeId, int n) {
    return _ChannelMergerNode_setOutputChannelCount(nodeId, n);
  }
